// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extended styles should have a higher priority 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
    }
  }
/>
`;

exports[`extended styles should have a higher priority 2`] = `
<View
  style={
    {
      "backgroundColor": "green",
    }
  }
/>
`;

exports[`style prop should have a higher priority 1`] = `
<View
  style={
    {
      "backgroundColor": "green",
    }
  }
/>
`;
